# beaver-chunk

./: .env.example  .gitignore  LICENSE  README.md  download_dataset_images.py  pyproject.toml  your_eval.py  your_lego_eval.py  your_lego_indexing.py  your_lego_retriever.py
.deepeval/: .deepeval_telemetry.txt
data/: description.txt  metadata.csv
data/huggingface_images/: metadata.md
data/mock/: dataset_mock_eval_retriever.json  description.txt
evaluator/: deep_eval.py  deep_eval_custom_llm.py
example/: how_use_vector_store.py
exemple/: how_use_chunking.py  how_use_document_loaders.py
src/: factory.py
src/chunking/: abstract_chunking.py  character.py  hierarchical.py  recursive.py  semantic.py
src/document_loaders/: abstract_document_loaders.py  data_preparation.py  graph_description_options.py  pdf_loader.py  txt_loader.py
src/document_loaders/utils/: detects_folder_or_file.py
src/embedding/: abstract_embedding.py  huggingface.py
src/evaluator/: deep_eval.py
src/llm/: configure_provider.py
src/utils/data_process/pos_processor/: for_document_loader.py
src/vector_store/: abstract_vector_store.py  chroma.py
